fix main content spacing

--- a/src/Home.css
+++ b/src/Home.css
@@ -203,8 +203,7 @@ h1 {
 }
 
 .main-content {
-  min-width: 50%;
-  max-width: 60%;
+  width: 75%;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -230,7 +229,7 @@ h1 {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 10px;
-  width: 100%;
+  width: 75%;
 }
 
 
